k8s/json-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: json-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: json-api
  template:
    metadata:
      labels:
        app: json-api
    spec:
      containers:
      - name: json-api
        image: hitesh381/json-api:latest
        ports:
        - containerPort: 5000
