k8s/json-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: json-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: json-worker
  template:
    metadata:
      labels:
        app: json-worker
    spec:
      containers:
      - name: worker
        image: hitesh381/json-temporal-app:latest
